syntax = "proto3";

package proto;

service AuthenticationService {
    rpc CreateToken(ClaimsDetails) returns (TokenResult) {}
    rpc ValidateToken(Token) returns (ValidateTokenResult) {}
    rpc RefreshToken(Token) returns (TokenResult) {}
}

message ClaimsDetails {
    string username = 1;
}

message TokenResult {
    string token = 3;
}

message Token {
    string token = 1;
}

message ValidateTokenResult {
    bool isValid = 1;
}