syntax = "proto3";

package proto;

service UserService {
    rpc SignUp(UserDetails) returns (UserResult) {}
    rpc SignIn(UserDetails) returns (UserResult) {}

}

message UserDetails {
    string Username = 1;
    string Password = 2;
}

message UserResult {
    string Username = 1;
    Error Error = 2;
}

message Error {
    string message = 1;
}